RESOLVED FIXED131412
REGRESSION (r155998): Elements render at very low resolution with some 3d transforms
https://bugs.webkit.org/show_bug.cgi?id=131412
Summary REGRESSION (r155998): Elements render at very low resolution with some 3d tra...
Simon Fraser (smfr)
Reported 2014-04-08 18:00:25 PDT
REGRESSION (r155998): Elements render at very low resolution with some 3d transforms
Attachments
Patch (6.50 KB, patch)
2014-04-08 18:03 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2014-04-08 18:03:29 PDT
Simon Fraser (smfr)
Comment 2 2014-04-08 18:04:01 PDT
Simon Fraser (smfr)
Comment 3 2014-04-08 18:12:41 PDT
Note You need to log in before you can comment on or make changes to this bug.