Source/WebCore: REGRESSION (r155998): Elements render at very low resolution with some 3d transforms https://bugs.webkit.org/show_bug.cgi?id=131412 <rdar://problem/16525044>

Reviewed by Tim Horton.

In r155998 we started to compute a root-relative transform in order to choose
a good contentsScale to avoid blurring on scaling.

However, the code failed to update this transform when passing over
GraphicsLayerCAs with no uncommitted changes, which caused us to choose
an incorrect contentsScale sometimes, resulting in blurriness.

Fix by updating the root-relative transform on layers with no uncommitted
changes.

Test: compositing/contents-scale/incremental-change.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::commitLayerChangesBeforeSublayers):

LayoutTests: REGRESSION (r155998): Elements render at very low resolution with some 3d transforms
https://bugs.webkit.org/show_bug.cgi?id=131412

Reviewed by Tim Horton.

Test that makes an incremental change to a layer property in a tree with
interesting 3d transforms.

* compositing/contents-scale/incremental-change-expected.html: Added.
* compositing/contents-scale/incremental-change.html: Added.

Canonical link: https://commits.webkit.org/149475@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166990 268f45cc-cd09-0410-ab3c-d52691b4dbfc